processed/jira/txt/LU/LU-17104.txt
Key:        LU-17104
Summary:    build fix for gcc12
Link:       https://jira.whamcloud.com/browse/LU-17104
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Sat, 9 Sep 2023 06:59:21 +0000
Updated:    Sat, 23 Sep 2023 14:19:12 +0000
Resolved:   Sat, 23 Sep 2023 14:19:12 +0000

--- Description ---
Building master with gcc12 hit:

/home/shaun/lustre-release/lustre/quota/qmt_entry.c: In function ‘qti_lqes_restore_init’:
/home/shaun/lustre-release/lustre/quota/qmt_entry.c:1060:21: error: the comparison will always evaluate as ‘true’ for the address of ‘qti_lqes_rstr_small’ will never be NULL [-Werror=address]
 1060 |                 if (!qti_lqes_rstr(env))
      |                     ^
In file included from /home/shaun/lustre-release/lustre/quota/qmt_entry.c:33:
/home/shaun/lustre-release/lustre/quota/qmt_internal.h:242:41: note: ‘qti_lqes_rstr_small’ declared here
  242 |                 struct qmt_lqe_restore  qti_lqes_rstr_small[QMT_MAX_POOL_NUM];
      |                                         ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

Which suggests that the if condition is using the wrong variable, probably should do:

                OBD_ALLOC(qmt_info(env)->qti_lqes_rstr,
                          qti_lqes_cnt(env) * sizeof(struct qmt_lqe_restore));
-               if (!qti_lqes_rstr(env))
+               if (!qmt_info(env)->qti_lqes_rstr)
                        rc = -ENOMEM;

--- Comment (pjones, Sat, 23 Sep 2023 14:19:12 +0000) ---
Landed for 2.16

--- Comment (gerrit, Sat, 23 Sep 2023 06:03:56 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/52330/

Subject: LU-17104 build: Correct test for bad allocation

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 9db00d1dbdf33f63ff5eb8f122aafc924f5425ff

--- Comment (gerrit, Sat, 9 Sep 2023 09:36:50 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/52330

Subject: LU-17104 build: Correct test for bad allocation

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: cfe21d88b371501753cbba2bc867c89b1eb2aab6

--- Comment (gerrit, Sat, 9 Sep 2023 07:23:26 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/52328

Subject: LU-17104 build: Correct test for bad allocation

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: b2d00f986831c0f166ab95e9634b575d1a94bbc2
